--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.4.19",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@emailjs/browser": "^4.4.1",
+        "framer-motion": "^12.29.2",
+        "i18next": "^25.8.0",
+        "leaflet": "^1.9.4",
+        "lucide-react": "^0.563.0",
+        "react-i18next": "^16.5.4",
+        "react-leaflet": "^4.2.1"
     }
 }
