--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
+        "chart.js": "^4.5.1",
         "framer-motion": "^12.29.2",
         "i18next": "^25.8.0",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.563.0",
+        "react-chartjs-2": "^5.3.1",
         "react-i18next": "^16.5.4",
         "react-leaflet": "^4.2.1"
     }
