--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-react": "^4.2.0",
+        "@vitejs/plugin-react": "^4.7.0",
         "autoprefixer": "^10.4.23",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
@@ -24,13 +24,17 @@
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "chart.js": "^4.5.1",
-        "framer-motion": "^12.29.2",
+        "framer-motion": "^12.33.0",
         "i18next": "^25.8.0",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.563.0",
         "react-chartjs-2": "^5.3.1",
         "react-i18next": "^16.5.4",
-        "react-leaflet": "^4.2.1"
+        "react-icons": "^5.5.0",
+        "react-leaflet": "^4.2.1",
+        "ziggy-js": "^2.6.0"
     }
 }
