--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-i18next": "^16.5.4",
         "react-icons": "^5.5.0",
         "react-leaflet": "^4.2.1",
+        "react-time-picker": "^8.0.2",
         "ziggy-js": "^2.6.0"
     }
 }
