--- a/package.json
+++ b/package.json
@@ -3,29 +3,27 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/react": "^1.3.0",
         "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-react": "^4.7.0",
+        "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.23",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.5.6",
+        "laravel-vite-plugin": "^1.0.5",
+        "postcss": "^8.4.38",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.4.19",
-        "vite": "^7.0.7"
+        "vite": "^5.4.0"
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1",
         "chart.js": "^4.5.1",
         "framer-motion": "^12.33.0",
         "i18next": "^25.8.0",
