--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
         "@inertiajs/inertia": "^0.11.1",
+        "antd": "^6.3.0",
         "chart.js": "^4.5.1",
+        "dayjs": "^1.11.19",
         "framer-motion": "^12.33.0",
         "i18next": "^25.8.0",
         "leaflet": "^1.9.4",
