--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
+        "@fortawesome/fontawesome-svg-core": "^7.2.0",
+        "@fortawesome/free-regular-svg-icons": "^7.2.0",
+        "@fortawesome/free-solid-svg-icons": "^7.2.0",
+        "@fortawesome/react-fontawesome": "^3.2.0",
         "@inertiajs/inertia": "^0.11.1",
         "antd": "^6.3.0",
         "chart.js": "^4.5.1",
@@ -36,6 +40,9 @@
         "react-icons": "^5.5.0",
         "react-leaflet": "^4.2.1",
         "react-time-picker": "^8.0.2",
+        "react-toastify": "^11.0.5",
+        "recharts": "^3.7.0",
+        "sonner": "^2.0.7",
         "ziggy-js": "^2.6.0"
     }
 }
